--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <!-- loading page ----------------------------> 
@@ -81,12 +82,12 @@
                 </div>
             </div>
             <div class="about_content">
-                <div data-aos="fade-right" class="left_content">
+                <div class="left_content">
                     <figure>
                         <img src="./images/kausar (1).jpg" alt="about_img_for_portfolio">
                     </figure>
                 </div>
-                <div data-aos="fade-left" class="right_content">
+                <div class="right_content">
                     <h2><span>I'm</span> Morsalin Kausar <br> And I'm a <span class="typing2"></span></h2>
                     <p>I'm passionate about all things Web Developing. I work hard. I care about writing clean code and I genuinely love to learn. I'm currently looking for the right opportunity to work In an environment that will help me progress into a Full Stack developer.</p>
                     <button>
@@ -137,6 +138,76 @@
         </div>
     </section>
     <!-- Service part end  -->
+
+    <!-- my skill part start -->
+        <section class="main_skill">
+            <div class="child_skill">
+                <div data-aos="zoom-in-up" class="skill_title">
+                    <h2>My Skills</h2>
+                    <div class="about_mini_title">
+                        <span class="first_child"></span>
+                        <span class="second_child">what i Know</span>
+                        <span class="this_child"></span>
+                    </div>
+                </div>
+                <div class="sill_contents">
+                    <div class="animate__animated animate__fadeInLeft skill_content">
+                        <h1>My creative skills & experiences.</h1>
+                        <p>
+                            I'm made MERN (MongoDB, Express, React, and Nodejs) Full Stack Web Developer and Building APIs in node js. As a Node js Developer, I can develop a fast scalable NodeJs Web Application with high performance, Secure, and Authentication using JSON Web Token REST API using MongoDB.!
+                        </p>
+                        <a href="https://github.com/MorsalinKausar043" target="_blank">Go Github</a>
+                    </div>
+                    <div class="animate__animated animate__fadeInRight skill_bar">
+                        <div class="wrapper">
+                            <div class="shape-1"></div>
+                            <div class="shape-2"></div>
+                            <div class="container">
+                                <h2>Animated Skills </h2>
+                                <div class="skills">
+                                    <div class="details">
+                                        <span>JavaScript</span>
+                                        <span>65%</span>
+                                    </div>
+                                    <div class="bar">
+                                        <div id="html-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="skills">
+                                    <div class="details">
+                                        <span>React JS</span>
+                                        <span>62%</span>
+                                    </div>
+                                    <div class="bar">
+                                        <div id="css-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="skills">
+                                    <div class="details">
+                                        <span>Express JS</span>
+                                        <span>60%</span>
+                                    </div>
+                                    <div class="bar">
+                                        <div id="js-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="skills">
+                                    <div class="details">
+                                        <span>MongoDB</span>
+                                        <span>58%</span>
+                                    </div>
+                                    <div class="bar">
+                                        <div id="db-bar"></div>
+                                    </div>
+                                </div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!-- my skill part end -->
 
     <!-- project part start  -->
     <div id="project" class="main_project">
